--- a/EmployeeInfo.Web/Views/Designations/Index.cshtml
+++ b/EmployeeInfo.Web/Views/Designations/Index.cshtml
@@ -5,37 +5,43 @@
 }
 
 <h2>Index</h2>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.DesignationName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DesignationDescription)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DesignationName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DesignationDescription)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.DesignationId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DesignationId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.DesignationId">Delete</a>
-            </td>
-        </tr>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
 }
-    </tbody>
-</table>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.DesignationName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DesignationDescription)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DesignationName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DesignationDescription)
+                </td>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.DesignationId">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.DesignationId">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.DesignationId">Delete</a>
+                    </td>
+                }
+                </tr>
+            }
+        </tbody>
+    </table>
