--- a/EmployeeInfo.Web/Views/Employees/Index.cshtml
+++ b/EmployeeInfo.Web/Views/Employees/Index.cshtml
@@ -6,9 +6,12 @@
 
 <h2>Index</h2>
 
+@if (User.Identity.IsAuthenticated)
+{
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+}
 <table class="table">
     <thead>
         <tr>
@@ -42,11 +45,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.EmployeeEmail)
             </td>
+            @if (User.Identity.IsAuthenticated)
+            {
             <td>
                 <a asp-action="Edit" asp-route-id="@item.EmployeeId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.EmployeeId">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.EmployeeId">Delete</a>
             </td>
+            }
         </tr>
 }
     </tbody>
