--- a/EmployeeInfo.Web/Views/Shared/_Layout.cshtml
+++ b/EmployeeInfo.Web/Views/Shared/_Layout.cshtml
@@ -31,13 +31,16 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Designations" asp-action="Index">Designations</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Employees</a>
-                    </li>
-                </ul>
+                    @if (User.IsInRole("Administrator"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Designations" asp-action="Index">Designations</a>
+                        </li>
+                    }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Employees" asp-action="Index">Employees</a>
+                        </li>
+                    </ul>
                 <partial name="_LoginPartial" />
             </div>
         </div>
